--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
-    "nodemailer": "^7.0.12"
+    "resend": "^6.6.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
